--- a/branches/facebook-api-annotation-processor/pom.xml
+++ b/branches/facebook-api-annotation-processor/pom.xml
@@ -13,12 +13,29 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
 		    <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                    <compilerArgument>-proc:none</compilerArgument>
+                    <source>1.5</source>
+                    <target>1.5</target>
                 </configuration>
 		    </plugin>
 		</plugins>
 	</build>
+
+    <!-- Don't need tools.jar for a Java 6 annotation -->
+	<profiles>
+		<profile>
+			<activation>
+			    <activeByDefault>true</activeByDefault>
+			</activation>
+			<dependencies>
+				<dependency>
+					<groupId>java</groupId>
+					<artifactId>tools</artifactId>
+					<version>1.5.0</version>
+					<scope>system</scope>
+					<systemPath>C:\program files\Java\jdk1.5.0_15\lib\tools.jar</systemPath>
+				</dependency>
+			</dependencies>
+		</profile>
+	</profiles>
 
 </project>
