--- a/branches/facebook-api-annotation-processor/pom.xml
+++ b/branches/facebook-api-annotation-processor/pom.xml
@@ -4,7 +4,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
 	<modelVersion>4.0.0</modelVersion>
     <groupId>com.google.code.facebookapi</groupId>
     <artifactId>facebook-api-annotation-processor</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0</version>
 	<packaging>jar</packaging>
 
 	<build>
