--- a/facebook-java-api-schema/.classpath
+++ b/facebook-java-api-schema/.classpath
@@ -4,7 +4,11 @@
   <classpathentry kind="output" path="target/classes"/>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
   <classpathentry kind="var" path="M2_REPO/javax/activation/activation/1.1/activation-1.1.jar" sourcepath="M2_REPO/javax/activation/activation/1.1/activation-1.1-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/javax/xml/jaxb-api/2.0EA3/jaxb-api-2.0EA3.jar"/>
   <classpathentry kind="var" path="M2_REPO/javax/xml/bind/jaxb-api/2.1/jaxb-api-2.1.jar" sourcepath="M2_REPO/javax/xml/bind/jaxb-api/2.1/jaxb-api-2.1-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/net/java/dev/jaxb2-commons/jaxb-fluent-api/2.0.1/jaxb-fluent-api-2.0.1.jar" sourcepath="M2_REPO/net/java/dev/jaxb2-commons/jaxb-fluent-api/2.0.1/jaxb-fluent-api-2.0.1-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/sun/xml/jaxb-impl/2.0EA3/jaxb-impl-2.0EA3.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/sun/xml/bind/jaxb-impl/2.1.3/jaxb-impl-2.1.3.jar" sourcepath="M2_REPO/com/sun/xml/bind/jaxb-impl/2.1.3/jaxb-impl-2.1.3-sources.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/sun/xml/jaxb-xjc/2.0EA3/jaxb-xjc-2.0EA3.jar"/>
   <classpathentry kind="var" path="M2_REPO/javax/xml/stream/stax-api/1.0-2/stax-api-1.0-2.jar" sourcepath="M2_REPO/javax/xml/stream/stax-api/1.0-2/stax-api-1.0-2-sources.jar"/>
 </classpath>
