--- a/facebook-java-api-schema/pom.xml
+++ b/facebook-java-api-schema/pom.xml
@@ -17,7 +17,7 @@
     <dependency>
       <groupId>org.jvnet.jaxb2_commons</groupId> 
       <artifactId>runtime</artifactId>
-      <version>RELEASE</version>
+      <version>0.4.1.3</version>
     </dependency> 
   </dependencies>
   
@@ -56,23 +56,22 @@
       <plugin>
 	<groupId>org.jvnet.jaxb2.maven2</groupId>
 	<artifactId>maven-jaxb2-plugin</artifactId>
-    <configuration>
-      <generatePackage>com.google.code.facebookapi.schema</generatePackage>
-        
-      <extension>true</extension>
-      <args>
-        <arg>-XtoString</arg>
-        <arg>-Xequals</arg>
-        <arg>-XhashCode</arg>
-      </args>
-      <plugins>
-        <plugin>
-          <groupId>org.jvnet.jaxb2_commons</groupId>
-          <artifactId>basic</artifactId>
-          <version>RELEASE</version>
-        </plugin>
-      </plugins>
-    </configuration>
+	<configuration>
+	  <generatePackage>com.google.code.facebookapi.schema</generatePackage>
+	  <extension>true</extension>
+	  <args>
+            <arg>-XtoString</arg>
+            <arg>-Xequals</arg>
+            <arg>-XhashCode</arg>
+	  </args>
+	  <plugins>
+            <plugin>
+              <groupId>org.jvnet.jaxb2_commons</groupId>
+              <artifactId>basic</artifactId>
+              <version>0.4.1.3</version>
+            </plugin>
+	  </plugins>
+	</configuration>
 	<executions>
 	  <execution>
 	    <goals>
