--- a/branches/composition/facebook-java-api/pom.xml
+++ b/branches/composition/facebook-java-api/pom.xml
@@ -46,6 +46,12 @@
       <artifactId>utils</artifactId>
       <version>1.07.00</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+    	<groupId>commons-httpclient</groupId>
+    	<artifactId>commons-httpclient</artifactId>
+    	<version>3.1</version>
+    	<scope>test</scope>
     </dependency>    
   </dependencies>
   <build>
