--- a/branches/composition/facebook-java-api/pom.xml
+++ b/branches/composition/facebook-java-api/pom.xml
@@ -3,13 +3,13 @@
   <parent>
     <groupId>com.google.code.facebookapi</groupId>
     <artifactId>parent-pom</artifactId>
-    <version>2.0.5-SNAPSHOT</version>
+    <version>3.0.0-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <groupId>com.google.code.facebookapi</groupId>
   <artifactId>facebook-java-api</artifactId>
   <packaging>jar</packaging>
-  <version>2.0.5-SNAPSHOT</version>
+  <version>3.0.0-SNAPSHOT</version>
   <name>Facebook Java Library</name>
   <description>Facebook Java Library</description>
 
@@ -17,7 +17,7 @@
     <dependency>
       <groupId>com.google.code.facebookapi</groupId>
       <artifactId>facebook-java-api-schema</artifactId>
-      <version>2.0.5-SNAPSHOT</version>
+      <version>3.0.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>commons-logging</groupId>
@@ -58,6 +58,7 @@
     <plugins>
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
+        <version>LATEST</version>
         <configuration>
           <descriptors>
             <descriptor>src/main/assembly/bin.xml</descriptor>
