--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -111,13 +111,15 @@
     </site>
   </distributionManagement>
   
-  <dependencies>
-    <dependency>
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
         <groupId>com.sun.xml.bind</groupId>
         <artifactId>jaxb-impl</artifactId>
         <version>2.1.9</version>
-    </dependency>
-  </dependencies>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <properties>
     <test.skip>true</test.skip>
