--- a/branches/composition/facebook-java-api/pom.xml
+++ b/branches/composition/facebook-java-api/pom.xml
@@ -48,14 +48,25 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-    	<groupId>commons-httpclient</groupId>
-    	<artifactId>commons-httpclient</artifactId>
-    	<version>3.1</version>
-    	<scope>test</scope>
+      <groupId>commons-httpclient</groupId>
+      <artifactId>commons-httpclient</artifactId>
+      <version>3.1</version>
+      <scope>test</scope>
     </dependency>    
   </dependencies>
   <build>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
         <version>LATEST</version>
@@ -81,11 +92,11 @@
             </execution>
         </executions>
         <dependencies>
-			<dependency>
-			  <groupId>com.google.code.facebookapi</groupId>
-			  <artifactId>facebook-api-annotation-processor</artifactId>
-			  <version>1.0</version>
-			</dependency>
+          <dependency>
+            <groupId>com.google.code.facebookapi</groupId>
+            <artifactId>facebook-api-annotation-processor</artifactId>
+            <version>1.0</version>
+          </dependency>
         </dependencies>
       </plugin>
     </plugins>
@@ -93,21 +104,21 @@
   <profiles>
     <profile>
       <activation>
-	<jdk>1.5</jdk>
+        <jdk>1.5</jdk>
       </activation>
       <dependencies>
-	<dependency>
-	  <groupId>com.sun.xml.bind</groupId>
-	  <artifactId>jaxb-impl</artifactId>
-	  <version>2.1.3</version>
-	</dependency>
-	<!--
-	    <dependency>
-	      <groupId>javax.xml.bind</groupId>
-	      <artifactId>jsr173_api</artifactId>
-	      <version>1.0</version>
-	    </dependency>
-	    -->
+        <dependency>
+          <groupId>com.sun.xml.bind</groupId>
+          <artifactId>jaxb-impl</artifactId>
+          <version>2.1.3</version>
+        </dependency>
+        <!--
+            <dependency>
+              <groupId>javax.xml.bind</groupId>
+              <artifactId>jsr173_api</artifactId>
+              <version>1.0</version>
+            </dependency>
+            -->
       </dependencies>
     </profile>
   </profiles>
