--- a/trunk/facebook-java-api/pom.xml
+++ b/trunk/facebook-java-api/pom.xml
@@ -57,6 +57,17 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
         <configuration>
           <descriptors>
@@ -69,20 +80,20 @@
   <profiles>
     <profile>
       <activation>
-	<jdk>1.5</jdk>
+        <jdk>1.5</jdk>
       </activation>
       <dependencies>
-	<dependency>
-	  <groupId>com.sun.xml.bind</groupId>
-	  <artifactId>jaxb-impl</artifactId>
-	</dependency>
-	<!--
-	    <dependency>
-	      <groupId>javax.xml.bind</groupId>
-	      <artifactId>jsr173_api</artifactId>
-	      <version>1.0</version>
-	    </dependency>
-	    -->
+        <dependency>
+          <groupId>com.sun.xml.bind</groupId>
+          <artifactId>jaxb-impl</artifactId>
+        </dependency>
+        <!--
+            <dependency>
+              <groupId>javax.xml.bind</groupId>
+              <artifactId>jsr173_api</artifactId>
+              <version>1.0</version>
+            </dependency>
+            -->
       </dependencies>
     </profile>
   </profiles>
