--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>com.google.code.facebookapi</groupId>
   <artifactId>parent-pom</artifactId>
   <packaging>pom</packaging>
-  <version>2.0.7-SNAPSHOT</version>
+  <version>2.0.6-SNAPSHOT</version>
   <name>Facebook Java Library - Parent Pom</name>
   <description>Facebook Java Library - Parent Pom</description>
   <url>http://code.google.com/p/facebook-java-api/</url>
@@ -52,6 +52,7 @@
         <artifactId>maven-release-plugin</artifactId>
         <configuration>
           <tagBase>https://facebook-java-api.googlecode.com/svn/tags/</tagBase>
+          <tag>release-${releaseVersion}</tag>
         </configuration>
       </plugin>
       <plugin>
