--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>com.google.code.facebookapi</groupId>
   <artifactId>parent-pom</artifactId>
   <packaging>pom</packaging>
-  <version>2.0.6</version>
+  <version>2.0.6-SNAPSHOT</version>
   <name>Facebook Java Library - Parent Pom</name>
   <description>Facebook Java Library - Parent Pom</description>
   <url>http://code.google.com/p/facebook-java-api/</url>
@@ -19,9 +19,9 @@
     <url>http://code.google.com/p/facebook-java-api/issues/list</url>
   </issueManagement>
   <scm>
-    <url>https://facebook-java-api.googlecode.com/svn/tags/release-2.0.6</url>
-    <connection>scm:svn:https://facebook-java-api.googlecode.com/svn/tags/release-2.0.6</connection>
-    <developerConnection>scm:svn:https://facebook-java-api.googlecode.com/svn/tags/release-2.0.6</developerConnection>
+    <url>https://facebook-java-api.googlecode.com/svn/trunk</url>
+    <connection>scm:svn:https://facebook-java-api.googlecode.com/svn/trunk</connection>
+    <developerConnection>scm:svn:https://facebook-java-api.googlecode.com/svn/trunk</developerConnection>
   </scm>
   <modules>
     <module>facebook-java-api-schema</module>
