--- a/facebook-java-api-schema/pom.xml
+++ b/facebook-java-api-schema/pom.xml
@@ -3,13 +3,13 @@
   <parent>
     <groupId>com.google.code.facebookapi</groupId>
     <artifactId>parent-pom</artifactId>
-    <version>2.0.6-SNAPSHOT</version>
+    <version>2.0.7</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <groupId>com.google.code.facebookapi</groupId>
   <artifactId>facebook-java-api-schema</artifactId>
   <packaging>jar</packaging>
-  <version>2.0.6-SNAPSHOT</version>
+  <version>2.0.7</version>
   <name>Facebook Java Library</name>
   <description>Facebook Java Library</description>
   
